[project]
name = "glparchis"
version = "20221204dev"
description = "Parchís game"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "pyopengl (>=3.1.9,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyqtwebengine (>=5.15.7,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.2"
poethepoet = "^0.34.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
glparchis = 'glparchis.glparchis:main'
glparchis_shortcuts = 'glparchis.shortcuts:main'

[tool.poe.tasks]
release = { script = "glparchis.poethepoet:release" }
translate = { script = "glparchis.poethepoet:translate" }
compile = { script = "glparchis.poethepoet:compile" }
pyinstaller = { script = "glparchis.poethepoet:pyinstaller" }

