[project]
name = "glparchis"
version = "20221204dev"
description = "Parchís game"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "pyopengl >=3.1.9",
    "colorama >=0.4.6",
    "pyqt5 >=5.15.11",
    "pyqtwebengine >=5.15.7"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.3"
poethepoet = "^0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
glparchis = 'glparchis.glparchis:main'
glparchis_shortcuts = 'glparchis.shortcuts:main'

[tool.poe.tasks]
release = { script = "devicesinlan.poethepoet:release" }
translate = { script = "devicesinlan.poethepoet:translate" }
compile = { script = "devicesinlan.poethepoet:compile" }
pyinstaller = { script = "devicesinlan.poethepoet:pyinstaller" }

